--- a/index.html
+++ b/index.html
@@ -1,30 +1,37 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+
 <head>
-    <meta charset="utf-8">
-	<meta name="description" content="kai kozlov" />
-	<link rel="icon" href="./favicon.ico" type="image/png">
-    <title>kai</title>
-    <link rel="stylesheet" type="text/css" href="./css/stylesheet.css">
-    <link href="data:image/x-icon;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQEAYAAABPYyMiAAAABmJLR0T///////8JWPfcAAAACXBIWXMAAABIAAAASABGyWs+AAAAF0lEQVRIx2NgGAWjYBSMglEwCkbBSAcACBAAAeaR9cIAAAAASUVORK5CYII=" rel="icon" type="image/x-icon"/>
-	<iframe src="silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
+  <script src="./js/title.js"></script>
+  <meta charset="utf-8">
+  <meta name="description" content="kai kozlov" />
+  <link rel="icon" href="./favicon.ico" type="image/png">
+  <title>kai</title>
+  <link rel="stylesheet" type="text/css" href="./css/stylesheet.css">
+  <link
+    href="data:image/x-icon;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQEAYAAABPYyMiAAAABmJLR0T///////8JWPfcAAAACXBIWXMAAABIAAAASABGyWs+AAAAF0lEQVRIx2NgGAWjYBSMglEwCkbBSAcACBAAAeaR9cIAAAAASUVORK5CYII="
+    rel="icon" type="image/x-icon" />
+  <iframe src="silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
   <video playsinline autoplay loop id="vid">
-    <source src="./misc/bg.mp4" type="video/mp4"></source>
+    <source src="./misc/1.mp4" type="video/mp4">
+    </source>
     <script>
       var video = document.currentScript.parentElement;
       video.volume = 0.333;
     </script>
   </video>
-  </head>
-  <body>
-    <div id="center">
-      <div id="title">
+</head>
+
+<body>
+  <div id="center">
+    <div id="title">
       <a href="./docs" class="title">kai</a>
-      </div>
-      <a target="_blank" href="https://discord.gg/3KVZrTW">discord</a> |
-      <a target="_blank" href="https://www.instagram.com/kaikozlov/">instagram</a> |
-	  <a target="_blank" href="https://selly.gg/@KaiTK">selly</a>
     </div>
-  </body>
+    <a target="_blank" href="https://discord.gg/3KVZrTW">discord</a> |
+    <a target="_blank" href="https://www.instagram.com/kaikozlov/">instagram</a> |
+    <a target="_blank" href="https://selly.gg/@KaiTK">selly</a>
+  </div>
+</body>
+
 </html>
