Changed Social Page

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta charset="utf-8">
   <meta name="description" content="kai kozlov" />
   <link rel="icon" href="./favicon.ico" type="image/png">
-  <title>kai</title>
   <link rel="stylesheet" type="text/css" href="./css/stylesheet.css">
+  <title>kai</title>
   <link
     href="data:image/x-icon;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQEAYAAABPYyMiAAAABmJLR0T///////8JWPfcAAAACXBIWXMAAABIAAAASABGyWs+AAAAF0lEQVRIx2NgGAWjYBSMglEwCkbBSAcACBAAAeaR9cIAAAAASUVORK5CYII="
     rel="icon" type="image/x-icon" />
@@ -27,7 +27,8 @@
   <div id="center">
     <div id="title">
       <a href="./docs" class="title">kai</a>
-
+    </div>
+  </div>
 </body>
 
 </html>
