--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
-<!DOCTYPE html>
 <html lang="en" dir="ltr">
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 
 <head>
   <script src="./js/title.js"></script>
-  <meta charset="utf-8">
   <meta name="description" content="kai kozlov" />
   <link rel="icon" href="./favicon.ico" type="image/png">
   <link rel="stylesheet" type="text/css" href="./css/stylesheet.css">
   <title>kai</title>
-  <link
-    href="data:image/x-icon;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQEAYAAABPYyMiAAAABmJLR0T///////8JWPfcAAAACXBIWXMAAABIAAAASABGyWs+AAAAF0lEQVRIx2NgGAWjYBSMglEwCkbBSAcACBAAAeaR9cIAAAAASUVORK5CYII="
-    rel="icon" type="image/x-icon" />
   <iframe src="silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
   <video playsinline autoplay loop id="vid">
     <source src="./misc/2.mp4" type="video/mp4">
@@ -21,6 +16,7 @@
       video.volume = 0.333;
     </script>
   </video>
+  <meta name="keywords" content="Kai,Kozlov,website,Kai Kozlov">
 </head>
 
 <body>
