--- a/404.html
+++ b/404.html
@@ -44,7 +44,7 @@
 	<body>
 		<div class="container">
 			<div class="content">
-				<div class="title"><a href="http://is.kaikozlov.com">page not found :(</a> </div>
+				<div class="title"><a href="http://kaikozlov.com">page not found :(</a> </div>
 			</div>
 		</div>
 	</body>
